src/parser.rs
use std::convert::TryFrom;
use std::fs;
use std::io;
use std::path::{Path, PathBuf};

use rustc_hash::{FxHashMap, FxHashSet};

use crate::ast::*;
use crate::error::{Error, ErrorList};
use crate::id::{reserved_id, Id, IdMap};
use crate::module;
use crate::module::ModuleContainer;
use crate::span::{Span, Spanned};
use crate::token::*;

fn spanned<T>(kind: T, span: Span) -> Spanned<T> {
    Spanned::<T>::new(kind, span)
}

fn needs_semicolon(expr: &Expr) -> bool {
    match expr {
        Expr::Block(..) | Expr::If(..) => false,
        _ => true,
    }
}

fn expr_is_callable(expr: &Expr) -> bool {
    needs_semicolon(expr)
}

fn parse_module<'a, P1: AsRef<Path>, P2: AsRef<Path>>(
    root_path: P1,
    module_file: P2,
    module_path: &SymbolPath,
    imported_modules: FxHashSet<SymbolPath>,
    native_modules: &'a ModuleContainer,
) -> Result<FxHashMap<SymbolPath, Program>, io::Error> {
    use crate::lexer::Lexer;

    let module_file_id = IdMap::new_id(&module_file.as_ref().to_string_lossy());

    let raw = fs::read_to_string(&module_file)?;

    let lexer = Lexer::new(&raw, module_file_id);
    let tokens = lexer.lex();

    let parser = Parser::new(root_path.as_ref(), tokens, imported_modules, native_modules);
    let program = parser.parse(module_path);

    Ok(program)
}

struct DefinitionInBlock {
    functions: Vec<AstFunction>,
    types: Vec<AstTypeDef>,
    imports: Vec<Spanned<ImportRange>>,
}

impl DefinitionInBlock {
    fn new() -> Self {
        Self {
            functions: Vec::new(),
            types: Vec::new(),
            imports: Vec::new(),
        }
    }
}

struct BlockBuilder {
    defs: Vec<DefinitionInBlock>,
}

impl BlockBuilder {
    fn new() -> Self {
        Self { defs: Vec::new() }
    }

    fn push(&mut self) {
        self.defs.push(DefinitionInBlock::new());
    }

    fn pop_and_build(&mut self, stmts: Vec<Spanned<Stmt>>, result_expr: Spanned<Expr>) -> Block {
        let def = self.defs.pop().unwrap();
        Block {
            functions: def.functions,
            types: def.types,
            imports: def.imports,
            stmts,
            result_expr: Box::new(result_expr),
        }
    }

    fn def(&mut self) -> &mut DefinitionInBlock {
        self.defs.last_mut().unwrap()
    }
}

pub struct Parser<'a> {
    root_path: PathBuf,
    tokens: Vec<Spanned<Token>>,
    pos: usize,

    main_stmts: Vec<Spanned<Stmt>>,
    module_buffers: FxHashMap<SymbolPath, Program>,
    imported_modules: FxHashSet<SymbolPath>,
    loaded_modules: FxHashSet<SymbolPath>,
    native_modules: &'a ModuleContainer,
    impls: Vec<Impl>,

    blocks_builder: BlockBuilder,
}

impl<'a> Parser<'a> {
    pub fn new(
        root_path: &Path,
        tokens: Vec<Spanned<Token>>,
        loaded_modules: FxHashSet<SymbolPath>,
        native_modules: &'a ModuleContainer,
    ) -> Parser<'a> {
        Self {
            root_path: root_path.to_path_buf(),
            tokens,
            pos: 0,
            main_stmts: Vec::new(),
            module_buffers: FxHashMap::default(),
            imported_modules: FxHashSet::default(),
            loaded_modules,
            native_modules,
            impls: Vec::new(),
            blocks_builder: BlockBuilder::new(),
        }
    }

    #[inline]
    fn next(&mut self) -> &Spanned<Token> {
        self.pos += 1;
        &self.tokens[self.pos]
    }

    #[inline]
    fn next_and<T>(&mut self, value: T) -> T {
        self.next();
        value
    }

    #[inline]
    fn peek(&self) -> &Spanned<Token> {
        &self.tokens[self.pos]
    }

    #[inline]
    fn prev(&self) -> &Spanned<Token> {
        &self.tokens[self.pos - 1]
    }

    #[inline]
    fn consume(&mut self, token: &Token) -> bool {
        if &self.peek().kind == token {
            self.pos += 1;
            true
        } else {
            false
        }
    }

    fn expect(&mut self, expected: &Token, skip: &[Token]) -> Option<()> {
        if !self.consume(&expected) {
            let token = self.peek().clone();
            error!(
                &token.span,
                "expected `{}` but got `{}`", expected, token.kind
            );

            self.skip_until(skip);
            // TODO: Improve it
            if self.peek().kind == *expected {
                self.next();
            }

            None
        } else {
            Some(())
        }
    }

    fn expect_identifier(&mut self, skip: &[Token]) -> Option<Id> {
        match self.peek().kind {
            Token::Identifier(name) => {
                self.next();
                Some(name)
            }
            _ => {
                let token = self.peek().clone();
                error!(
                    &token.span,
                    "expected `identifier` but got `{}`", token.kind
                );

                self.skip_until(skip);
                // TODO: Improve it
                if let Token::Identifier(_) = self.peek().kind {
                    self.next();
                }

                None
            }
        }
    }

    #[inline]
    fn skip_until(&mut self, tokens: &[Token]) {
        let tokens_to_dec: Vec<&Token> =
            tokens.iter().filter(|t| t.is_close_parenthese()).collect();
        let tokens_to_inc: Vec<Token> = tokens_to_dec
            .iter()
            .map(|t| t.matching_parenthese().unwrap())
            .collect();
        let mut depth = 0;

        while depth > 0 || (!tokens.contains(&self.peek().kind) && self.peek().kind != Token::EOF) {
            let curr = &self.peek().kind;

            if tokens_to_dec.contains(&curr) {
                depth -= 1;
            } else if tokens_to_inc.contains(&curr) {
                depth += 1;
            }

            self.next();
        }
    }

    // Parse something using `func`. skip to `tokens` if fail.
    fn parse_skip<T, F>(&mut self, mut func: F, tokens: &[Token]) -> Option<T>
    where
        F: FnMut(&mut Self) -> Option<T>,
    {
        let res = func(self);
        if res.is_none() {
            self.skip_until(tokens);
        }

        res
    }

    fn parse_path_with_first_segment(
        &mut self,
        first: Option<SymbolPathSegment>,
        first_span: Span,
    ) -> Option<Spanned<SymbolPath>> {
        let mut path = SymbolPath {
            segments: Vec::new(),
        };

        if let Some(first) = first {
            path.segments.push(first);
        }

        while self.consume(&Token::Scope) {
            let id = self.expect_identifier(&[Token::Scope]);
            if let Some(id) = id {
                path.segments.push(SymbolPathSegment::new(id));
            }
        }

        let span = Span::merge(&first_span, &self.prev().span);
        Some(spanned(path, span))
    }

    #[allow(dead_code)]
    fn parse_path(&mut self) -> Option<Spanned<SymbolPath>> {
        let first = self
            .expect_identifier(&[Token::Scope])
            .map(SymbolPathSegment::new);

        self.parse_path_with_first_segment(first, self.prev().span.clone())
    }

    #[inline]
    fn parse_binop<F>(
        &mut self,
        allow_join: bool,
        mut func: F,
        rules: &[(&Token, &BinOp)],
    ) -> Option<Spanned<Expr>>
    where
        F: FnMut(&mut Self) -> Option<Spanned<Expr>>,
    {
        let mut expr = func(self)?;

        if allow_join {
            'outer: loop {
                for (token, binop) in rules {
                    if self.consume(token) {
                        let rhs = func(self)?;
                        let span = Span::merge(&expr.span, &rhs.span);

                        expr = spanned(
                            Expr::BinOp((*binop).clone(), Box::new(expr), Box::new(rhs)),
                            span,
                        );
                        continue 'outer;
                    }
                }

                break;
            }
        } else {
            for (token, binop) in rules {
                if self.consume(token) {
                    let rhs = func(self)?;
                    let span = Span::merge(&expr.span, &rhs.span);

                    expr = spanned(
                        Expr::BinOp((*binop).clone(), Box::new(expr), Box::new(rhs)),
                        span,
                    );
                    break;
                }
            }
        }

        Some(expr)
    }

    fn parse_field_init(&mut self) -> Option<(Spanned<Id>, Spanned<Expr>)> {
        let tokens_to_skip = &[Token::Comma, Token::Rbrace];

        let name = self.expect_identifier(tokens_to_skip)?;
        let name = spanned(name, self.prev().span.clone());

        self.expect(&Token::Colon, tokens_to_skip)?;

        let expr = self.parse_skip(Self::parse_expr, tokens_to_skip)?;

        Some((name, expr))
    }

    fn parse_struct(&mut self, name: Id, name_span: Span) -> Option<Spanned<Expr>> {
        let ty = self.parse_type_app(spanned(name, name_span.clone()));

        self.expect(&Token::Lbrace, &[Token::Lbrace]);

        if self.consume(&Token::Rbrace) {
            let span = Span::merge(&name_span, &self.prev().span);
            Some(spanned(Expr::Struct(ty, Vec::new()), span))
        } else {
            let mut fields = Vec::new();

            match self.parse_field_init() {
                Some(field) => fields.push(field),
                None => self.skip_until(&[Token::Comma, Token::Rbrace]),
            };

            while self.peek().kind != Token::Rbrace && self.consume(&Token::Comma) {
                if self.peek().kind == Token::Rbrace {
                    break;
                }

                match self.parse_field_init() {
                    Some(field) => fields.push(field),
                    None => self.skip_until(&[Token::Comma, Token::Rbrace]),
                };
            }

            self.expect(&Token::Rbrace, &[Token::Rbrace])?;

            let span = Span::merge(&name_span, &self.prev().span);
            Some(spanned(Expr::Struct(ty, fields), span))
        }
    }

    fn parse_var_or_call(&mut self, ident: Id, ident_span: Span) -> Option<Spanned<Expr>> {
        self.next();

        match &self.peek().kind {
            Token::Scope => {
                let path = self.parse_path_with_first_segment(
                    Some(SymbolPathSegment::new(ident)),
                    ident_span,
                )?;
                Some(spanned(Expr::Path(path.kind), path.span))
            }
            Token::Colon => {
                self.next();
                self.parse_struct(ident, ident_span)
            }
            _ => Some(spanned(Expr::Variable(ident, false), ident_span)),
        }
    }

    fn parse_tuple(&mut self, lparen_span: &Span, first: Spanned<Expr>) -> Option<Spanned<Expr>> {
        let mut inner = vec![first];

        while self.peek().kind != Token::Rparen && self.consume(&Token::Comma) {
            if self.peek().kind == Token::Rparen {
                break;
            }

            let expr = self.parse_skip(Self::parse_expr, &[Token::Comma, Token::Rparen])?;
            inner.push(expr);
        }

        self.expect(&Token::Rparen, &[Token::Rparen])?;

        let rparen_span = &self.prev().span;
        let span = Span::merge(&lparen_span, rparen_span);

        Some(spanned(Expr::Tuple(inner), span))
    }

    fn parse_array(&mut self) -> Option<Spanned<Expr>> {
        let lbracket_span = self.peek().span.clone();
        self.next(); // eat "["

        let init_expr = self.parse_expr()?;

        self.expect(&Token::Semicolon, &[Token::Semicolon]);

        let size = match self.peek().kind {
            Token::Number(size) => match usize::try_from(size) {
                Ok(size) => size,
                Err(_) => {
                    error!(&self.peek().span, "too large");
                    0
                }
            },
            _ => return None,
        };
        self.next();

        self.expect(&Token::Rbracket, &[Token::Rbracket]);

        let span = Span::merge(&lbracket_span, &self.prev().span);
        Some(spanned(Expr::Array(Box::new(init_expr), size), span))
    }

    fn parse_primary(&mut self) -> Option<Spanned<Expr>> {
        let token = self.peek().clone();

        match token.kind {
            Token::Number(n) => {
                self.next();
                Some(spanned(Expr::Literal(Literal::Number(n)), token.span))
            }
            Token::UnsignedNumber(n) => {
                self.next();
                Some(spanned(
                    Expr::Literal(Literal::UnsignedNumber(n)),
                    token.span,
                ))
            }
            Token::String(s) => {
                self.next();
                Some(spanned(Expr::Literal(Literal::String(s)), token.span))
            }
            Token::Char(ch) => {
                self.next();
                Some(spanned(Expr::Literal(Literal::Char(ch)), token.span))
            }
            Token::Identifier(name) => self.parse_var_or_call(name, token.span),
            Token::Keyword(Keyword::True) => {
                self.next();
                Some(spanned(Expr::Literal(Literal::True), token.span))
            }
            Token::Keyword(Keyword::False) => {
                self.next();
                Some(spanned(Expr::Literal(Literal::False), token.span))
            }
            Token::Keyword(Keyword::Null) => {
                self.next();
                Some(spanned(Expr::Literal(Literal::Null), token.span))
            }
            Token::Lbracket => self.parse_array(),
            Token::Lparen => {
                let lparen_span = self.peek().span.clone();
                self.next();

                if self.consume(&Token::Rparen) {
                    // Unit literal
                    let span = Span::merge(&lparen_span, &self.prev().span);
                    Some(spanned(Expr::Literal(Literal::Unit), span))
                } else {
                    let mut expr = self.parse_expr()?;

                    if self.peek().kind == Token::Comma {
                        self.parse_tuple(&lparen_span, expr)
                    } else {
                        self.expect(&Token::Rparen, &[Token::Rparen])?;
                        let rparen_span = &self.prev().span;

                        expr.span = Span::merge(&lparen_span, rparen_span);

                        Some(expr)
                    }
                }
            }
            Token::Lbrace => self.parse_block_expr(),
            Token::Keyword(Keyword::If) => self.parse_if_expr(),
            _ => {
                error!(
                    &token.span,
                    "expected `number`, `identifier`, `true`, `false` or `(` but got `{}`",
                    self.peek().kind
                );
                None
            }
        }
    }

    fn parse_field(&mut self) -> Option<Spanned<Expr>> {
        let parse = Self::parse_primary;
        let mut expr = parse(self)?;

        loop {
            if self.consume(&Token::Dot) {
                match self.peek().kind {
                    Token::Number(n) => {
                        self.next();

                        if n < 0 {
                            error!(&self.peek().span.clone(), "field of negative number");
                            return None;
                        }

                        let span = Span::merge(&expr.span, &self.prev().span);
                        expr =
                            spanned(Expr::Field(Box::new(expr), Field::Number(n as usize)), span);
                    }
                    Token::Identifier(id) => {
                        self.next();
                        let span = Span::merge(&expr.span, &self.prev().span);
                        expr = spanned(Expr::Field(Box::new(expr), Field::Id(id)), span);
                    }
                    _ => {
                        error!(
                            &self.peek().span.clone(),
                            "expected `number` but got `{}`",
                            self.peek().kind
                        );
                    }
                }
            } else {
                break;
            }
        }

        Some(expr)
    }

    fn parse_expr_app(&mut self) -> Option<Spanned<Expr>> {
        let parse = Self::parse_field;

        let mut expr = parse(self)?;

        if self.consume(&Token::LTypeArgs) {
            let tyargs = self.parse_type_args();

            let span = Span::merge(&expr.span, &self.prev().span);
            expr = spanned(Expr::App(Box::new(expr), tyargs), span);
        }

        Some(expr)
    }

    fn parse_subscript(&mut self) -> Option<Spanned<Expr>> {
        let parse = Self::parse_expr_app;

        let mut expr = parse(self)?;

        loop {
            if self.consume(&Token::Lbracket) {
                let subscript = self.parse_expr()?;

                self.expect(&Token::Rbracket, &[Token::Rbracket])?;

                let span = Span::merge(&expr.span, &self.prev().span);
                expr = spanned(Expr::Subscript(Box::new(expr), Box::new(subscript)), span);
            } else {
                break;
            }
        }

        Some(expr)
    }

    fn next_is_arg(&self) -> bool {
        match &self.peek().kind {
            Token::Number(_)
            | Token::UnsignedNumber(_)
            | Token::Char(_)
            | Token::String(_)
            | Token::Identifier(_)
            | Token::Keyword(Keyword::True)
            | Token::Keyword(Keyword::False)
            | Token::Keyword(Keyword::Null)
            | Token::Lparen => true,
            _ => false,
        }
    }

    fn parse_call(&mut self) -> Option<Spanned<Expr>> {
        let parse = Self::parse_subscript;

        let mut expr = parse(self)?;

        while expr_is_callable(&expr.kind) && self.next_is_arg() {
            let arg_expr = parse(self)?;
            let span = Span::merge(&expr.span, &arg_expr.span);
            expr = spanned(Expr::Call(Box::new(expr), Box::new(arg_expr)), span);
        }

        Some(expr)
    }

    fn parse_range_end(
        &mut self,
        parse: fn(&mut Self) -> Option<Spanned<Expr>>,
        start: Option<Spanned<Expr>>,
        start_span: &Span,
    ) -> Option<Spanned<Expr>> {
        let (end, span) = if self.next_is_arg() {
            let end = parse(self)?;
            let span = Span::merge(start_span, &end.span);
            (Some(end), span)
        } else {
            (None, Span::merge(start_span, &self.prev().span))
        };

        Some(spanned(
            Expr::Range(start.map(Box::new), end.map(Box::new)),
            span,
        ))
    }

    fn parse_range(&mut self) -> Option<Spanned<Expr>> {
        let parse = Self::parse_call;

        if self.consume(&Token::DoubleDot) {
            let start_span = self.prev().span.clone();
            return self.parse_range_end(parse, None, &start_span);
        }

        let mut expr = parse(self)?;
        if self.consume(&Token::DoubleDot) {
            let start_span = expr.span.clone();
            expr = self.parse_range_end(parse, Some(expr), &start_span)?;
        }

        Some(expr)
    }

    #[inline]
    fn parse_unary_op<P, F>(&mut self, mut parse: P, f: F) -> Option<Spanned<Expr>>
    where
        P: FnMut(&mut Self) -> Option<Spanned<Expr>>,
        F: Fn(Box<Spanned<Expr>>) -> Expr,
    {
        let symbol_span = self.peek().span.clone();
        self.next();

        let expr = parse(self)?;
        let span = Span::merge(&symbol_span, &expr.span);
        Some(spanned(f(Box::new(expr)), span))
    }

    fn parse_unary(&mut self) -> Option<Spanned<Expr>> {
        let parse = Self::parse_range;

        match self.peek().kind {
            Token::Asterisk => self.parse_unary_op(parse, Expr::Dereference),
            Token::Sub => self.parse_unary_op(parse, Expr::Negative),
            Token::Keyword(Keyword::Not) => self.parse_unary_op(parse, Expr::Not),
            Token::Ampersand => {
                let symbol_span = self.peek().span.clone();
                self.next();

                let is_mutable = self.consume(&Token::Keyword(Keyword::Mut));
                let expr = parse(self)?;

                let span = Span::merge(&symbol_span, &expr.span);
                Some(spanned(Expr::Address(Box::new(expr), is_mutable), span))
            }
            _ => parse(self),
        }
    }

    fn parse_mul(&mut self) -> Option<Spanned<Expr>> {
        self.parse_binop(
            true,
            Self::parse_unary,
            &[
                (&Token::Asterisk, &BinOp::Mul),
                (&Token::Div, &BinOp::Div),
                (&Token::Percent, &BinOp::Mod),
            ],
        )
    }

    fn parse_add(&mut self) -> Option<Spanned<Expr>> {
        self.parse_binop(
            true,
            Self::parse_mul,
            &[(&Token::Add, &BinOp::Add), (&Token::Sub, &BinOp::Sub)],
        )
    }

    fn parse_shift(&mut self) -> Option<Spanned<Expr>> {
        self.parse_binop(
            true,
            Self::parse_add,
            &[
                (&Token::LShift, &BinOp::LShift),
                (&Token::RShift, &BinOp::RShift),
            ],
        )
    }

    fn parse_bit_and(&mut self) -> Option<Spanned<Expr>> {
        self.parse_binop(
            true,
            Self::parse_shift,
            &[(&Token::Ampersand, &BinOp::BitAnd)],
        )
    }

    fn parse_bit_xor(&mut self) -> Option<Spanned<Expr>> {
        self.parse_binop(true, Self::parse_bit_and, &[(&Token::Xor, &BinOp::BitXor)])
    }

    fn parse_bit_or(&mut self) -> Option<Spanned<Expr>> {
        self.parse_binop(
            true,
            Self::parse_bit_xor,
            &[(&Token::VerticalBar, &BinOp::BitOr)],
        )
    }

    fn parse_relational(&mut self) -> Option<Spanned<Expr>> {
        self.parse_binop(
            false,
            Self::parse_bit_or,
            &[
                (&Token::LessThan, &BinOp::LessThan),
                (&Token::LessThanOrEqual, &BinOp::LessThanOrEqual),
                (&Token::GreaterThan, &BinOp::GreaterThan),
                (&Token::GreaterThanOrEqual, &BinOp::GreaterThanOrEqual),
            ],
        )
    }

    fn parse_equality(&mut self) -> Option<Spanned<Expr>> {
        self.parse_binop(
            false,
            Self::parse_relational,
            &[
                (&Token::Equal, &BinOp::Equal),
                (&Token::NotEqual, &BinOp::NotEqual),
            ],
        )
    }

    fn parse_and(&mut self) -> Option<Spanned<Expr>> {
        self.parse_binop(true, Self::parse_equality, &[(&Token::And, &BinOp::And)])
    }

    fn parse_or(&mut self) -> Option<Spanned<Expr>> {
        self.parse_binop(true, Self::parse_and, &[(&Token::Or, &BinOp::Or)])
    }

    fn parse_expr(&mut self) -> Option<Spanned<Expr>> {
        self.parse_or()
    }

    fn parse_bind_stmt(&mut self) -> Option<Spanned<Stmt>> {
        // Eat "let"
        let let_span = self.peek().span.clone();
        self.next();

        let is_mutable = self.consume(&Token::Keyword(Keyword::Mut));

        // Bind name
        let name = self.expect_identifier(&[Token::Semicolon])?;

        let ty = if self.consume(&Token::Colon) {
            let ty = self.parse_skip(Self::parse_type, &[Token::Equal])?;
            Some(ty)
        } else {
            None
        };

        self.expect(&Token::Equal, &[Token::Semicolon])?;

        // Initial expression
        let expr = match self.parse_expr() {
            Some(expr) => expr,
            None => {
                self.skip_until(&[Token::Semicolon]);
                return None;
            }
        };

        self.expect(&Token::Semicolon, &[Token::Semicolon])?;
        let semicolon_span = &self.prev().span;

        let span = Span::merge(&let_span, semicolon_span);

        Some(spanned(
            Stmt::Bind(name, ty, Box::new(expr), is_mutable, false, false),
            span,
        ))
    }

    fn parse_block_expr(&mut self) -> Option<Spanned<Expr>> {
        let lbrace_span = self.peek().span.clone();
        self.next();

        let mut result_expr = None;
        let mut stmts = Vec::new();

        self.blocks_builder.push();

        while !self.consume(&Token::Rbrace) {
            if self.consume(&Token::Semicolon) {
                continue;
            }

            let (is_expr, stmt) = self.parse_stmt_without_expr();
            if is_expr {
                let expr = self.parse_skip(Self::parse_expr, &[Token::Semicolon])?;

                // Assign statement
                let expr = match self.parse_assign_operators(expr) {
                    Ok(stmt) => {
                        if let Some(stmt) = stmt {
                            stmts.push(stmt);
                        }
                        continue;
                    }
                    Err(expr) => expr,
                };

                if self.consume(&Token::Rbrace) {
                    result_expr = Some(expr);
                    break;
                }

                if needs_semicolon(&expr.kind) {
                    self.expect(&Token::Semicolon, &[Token::Semicolon])?;
                }

                let span = expr.span.clone();
                stmts.push(spanned(Stmt::Expr(expr), span));
            } else if let Some(stmt) = stmt {
                stmts.push(stmt);
            }
        }

        let span = Span::merge(&lbrace_span, &self.prev().span);

        // Push literal unit if there is no result expression
        let result_expr =
            result_expr.unwrap_or_else(|| spanned(Expr::Literal(Literal::Unit), span.clone()));

        let block = self.blocks_builder.pop_and_build(stmts, result_expr);

        Some(spanned(Expr::Block(block), span))
    }

    fn expect_block_expr(&mut self) -> Option<Spanned<Expr>> {
        if self.peek().kind != Token::Lbrace {
            error!(&self.peek().span.clone(), "expected block");
            return None;
        }

        self.parse_block_expr()
    }

    fn expect_block(&mut self) -> Option<Spanned<Stmt>> {
        let block = self.expect_block_expr()?;
        let span = block.span.clone();
        let block = spanned(Stmt::Expr(block), span);

        Some(block)
    }

    fn parse_stmt_assign(&mut self, lhs: Spanned<Expr>) -> Option<Spanned<Stmt>> {
        let rhs = self.parse_skip(Self::parse_expr, &[Token::Semicolon])?;

        self.expect(&Token::Semicolon, &[Token::Semicolon])?;

        let span = Span::merge(&lhs.span, &self.prev().span);
        Some(spanned(Stmt::Assign(lhs, Box::new(rhs)), span))
    }

    fn parse_compound_assignment(
        &mut self,
        binop: BinOp,
        lhs: Spanned<Expr>,
    ) -> Option<Spanned<Stmt>> {
        self.next();

        let rhs = self.parse_skip(Self::parse_expr, &[Token::Semicolon])?;
        self.expect(&Token::Semicolon, &[Token::Semicolon]);

        let span = Span::merge(&lhs.span, &self.prev().span);
        Some(spanned(
            Stmt::Assign(
                lhs.clone(),
                Box::new(spanned(
                    Expr::BinOp(binop, Box::new(lhs), Box::new(rhs)),
                    span.clone(),
                )),
            ),
            span,
        ))
    }

    fn parse_assign_operators(
        &mut self,
        lhs: Spanned<Expr>,
    ) -> Result<Option<Spanned<Stmt>>, Spanned<Expr>> {
        match &self.peek().kind {
            Token::Assign => {
                self.next();
                Ok(self.parse_stmt_assign(lhs))
            }
            Token::AddAssign => Ok(self.parse_compound_assignment(BinOp::Add, lhs)),
            Token::SubAssign => Ok(self.parse_compound_assignment(BinOp::Sub, lhs)),
            Token::MulAssign => Ok(self.parse_compound_assignment(BinOp::Mul, lhs)),
            Token::DivAssign => Ok(self.parse_compound_assignment(BinOp::Div, lhs)),
            Token::ModAssign => Ok(self.parse_compound_assignment(BinOp::Mod, lhs)),
            _ => Err(lhs),
        }
    }

    fn parse_return(&mut self) -> Option<Spanned<Stmt>> {
        // Eat "return"
        let return_token_span = self.peek().span.clone();
        self.next();

        if self.consume(&Token::Semicolon) {
            let span = Span::merge(&return_token_span, &self.prev().span);
            Some(spanned(Stmt::Return(None), span))
        } else {
            let expr = self.parse_skip(Self::parse_expr, &[Token::Semicolon])?;

            self.expect(&Token::Semicolon, &[Token::Semicolon])?;
            let semicolon_span = &self.prev().span;

            let span = Span::merge(&return_token_span, &semicolon_span);

            Some(spanned(Stmt::Return(Some(expr)), span))
        }
    }

    fn parse_if_expr(&mut self) -> Option<Spanned<Expr>> {
        let if_token_span = self.peek().span.clone();
        self.next();

        // Parse condition expression
        let expr = self.parse_skip(
            Self::parse_expr,
            &[Token::Lbrace, Token::Keyword(Keyword::Else)],
        );
        // Parse then-clause
        let then_expr = self.expect_block_expr()?;

        // Parse else-clause
        let else_expr = if self.consume(&Token::Keyword(Keyword::Else)) {
            if self.peek().kind == Token::Keyword(Keyword::If) {
                Some(self.parse_skip(Self::parse_if_expr, &[Token::Rbrace])?)
            } else {
                Some(self.expect_block_expr()?)
            }
        } else {
            None
        }
        .map(Box::new);

        let span = Span::merge(
            &if_token_span,
            else_expr
                .as_ref()
                .map(|e| &e.span)
                .unwrap_or(&then_expr.span),
        );
        Some(spanned(
            Expr::If(Box::new(expr?), Box::new(then_expr), else_expr),
            span,
        ))
    }

    fn parse_while_stmt(&mut self) -> Option<Spanned<Stmt>> {
        let while_token_span = self.peek().span.clone();
        self.next();

        // Parse condition expression
        let cond = self.parse_skip(Self::parse_expr, &[Token::Lbrace]);
        // Parse body
        let stmt = self.expect_block()?;

        let span = Span::merge(&while_token_span, &stmt.span);
        Some(spanned(Stmt::While(cond?, Box::new(stmt)), span))
    }

    fn parse_import_range(&mut self) -> Option<Spanned<ImportRange>> {
        let mut stack = Vec::new();
        let mut top = None;

        let first = self.expect_identifier(&[Token::Scope])?;
        let first_span = self.prev().span.clone();

        if self.consume(&Token::Keyword(Keyword::As)) {
            let renamed = self.expect_identifier(&[Token::Semicolon])?;
            let span = Span::merge(&first_span, &self.prev().span);
            return Some(spanned(ImportRange::Renamed(first, renamed), span));
        }

        stack.push(first);

        while self.consume(&Token::Scope) {
            match &self.peek().kind {
                Token::Identifier(id) => {
                    let id = *id;
                    self.next();

                    if self.consume(&Token::Keyword(Keyword::As)) {
                        let renamed = self.expect_identifier(&[Token::Semicolon])?;
                        top = Some(ImportRange::Renamed(id, renamed));

                        break;
                    } else {
                        stack.push(id);
                    }
                }
                Token::Lbrace => {
                    self.next();

                    let mut ranges = Vec::new();

                    if let Some(first) =
                        self.parse_skip(Self::parse_import_range, &[Token::Rbrace, Token::Comma])
                    {
                        ranges.push(first.kind);
                    }

                    while self.peek().kind != Token::Rbrace && self.consume(&Token::Comma) {
                        if self.peek().kind == Token::Rbrace {
                            break;
                        }

                        if let Some(range) = self
                            .parse_skip(Self::parse_import_range, &[Token::Rbrace, Token::Comma])
                        {
                            ranges.push(range.kind);
                        }
                    }

                    self.expect(&Token::Rbrace, &[Token::Rbrace]);

                    top = Some(ImportRange::Multiple(ranges));

                    break;
                }
                Token::Asterisk => {
                    self.next();
                    top = Some(ImportRange::All);
                    break;
                }
                _ => break,
            }
        }

        let end_span = self.prev().span.clone();

        let mut range = top.unwrap_or_else(|| ImportRange::Symbol(stack.pop().unwrap()));
        while let Some(id) = stack.pop() {
            range = ImportRange::Scope(id, Box::new(range));
        }

        let span = Span::merge(&first_span, &end_span);
        Some(spanned(range, span))
    }

    fn load_module(&mut self, module_path: &SymbolPath, span: &Span, load_parent: bool) -> bool {
        // Parse the module file if the module is not loaded already
        if let Some(module_file) = module::find_module_file(&self.root_path, &module_path) {
            if !self.loaded_modules.contains(&module_path) {
                self.loaded_modules.insert(module_path.clone());
                match parse_module(
                    &self.root_path,
                    &module_file,
                    &module_path,
                    self.loaded_modules.clone(),
                    &self.native_modules,
                ) {
                    Ok(module_buffers) => {
                        // Merge module buffers
                        for (module_path, program) in module_buffers {
                            self.module_buffers.insert(module_path.clone(), program);
                            self.loaded_modules.insert(module_path.clone());
                        }
                    }
                    Err(err) if err.kind() == io::ErrorKind::NotFound => {
                        error!(&span.clone(), "Not found module `{}`", module_path);
                        return false;
                    }
                    Err(err) => {
                        error!(
                            &span.clone(),
                            "Unable to load module {}: {}", module_path, err
                        );
                        return false;
                    }
                }
            }
        } else if self.native_modules.contains(module_path) {
            self.imported_modules.insert(module_path.clone());
            return true;
        } else {
            match module_path.parent() {
                Some(path) if load_parent => {
                    return self.load_module(&path, span, false);
                }
                _ => {
                    error!(&span.clone(), "Cannot find module `{}`", module_path);
                    return false;
                }
            }
        }

        self.imported_modules.insert(module_path.clone());
        true
    }

    fn parse_import_stmt(&mut self) -> Option<Spanned<Stmt>> {
        self.next();

        let import_range = self.parse_skip(Self::parse_import_range, &[Token::Semicolon])?;

        // Load modules
        let mut failed = false;
        let paths = import_range.kind.to_paths();
        for path in &paths {
            let path = path.as_path();
            if !self.load_module(path, &import_range.span, true) {
                failed = true;
            }
        }

        if failed {
            return None;
        }

        self.expect(&Token::Semicolon, &[Token::Semicolon])?;

        self.blocks_builder.def().imports.push(import_range);

        None
    }

    fn parse_stmt_without_expr(&mut self) -> (bool, Option<Spanned<Stmt>>) {
        let token = self.peek();
        let stmt = match token.kind {
            Token::Keyword(Keyword::Let) => self.parse_bind_stmt(),
            Token::Keyword(Keyword::Return) => self.parse_return(),
            Token::Keyword(Keyword::While) => self.parse_while_stmt(),
            Token::Keyword(Keyword::Import) => self.parse_import_stmt(),
            Token::Keyword(Keyword::Fn) => {
                let func = self.parse_fn_decl();
                if let Some(func) = func {
                    self.blocks_builder.def().functions.push(func);
                }
                None
            }
            Token::Keyword(Keyword::Type) => {
                let tydef = self.parse_def_type();
                if let Some(tydef) = tydef {
                    self.blocks_builder.def().types.push(tydef);
                }
                None
            }
            _ => return (true, None),
        };

        (false, stmt)
    }
